# cr-mas

./: .env.example  .gitignore  README.md  pyproject.toml
cr_mas/: main.py
cr_mas/agents/: bug.py  chief.py  extension.py  performance.py  readability.py  security.py  style.py
cr_mas/config/: settings.py
cr_mas/graph/: builder.py  state.py
cr_mas/llm/: client.py
cr_mas/memory/: schema.sql  sqlite_store.py  vector_store.py
cr_mas/tools/: file_reader.py  git_parser.py
tests/: test_bug.py  test_performance.py  test_readability.py  test_security.py  test_style.py
tests/fixtures/: bad_style.py  buggy_code.py  complex_function.py  demo_all.py  readability_code.py  sql_injection.py
